<resources xmlns:ns1="http://schemas.android.com/tools">
    <string name="app_name">Fekra</string>
    <string name="app_title">فكرة</string>
    <string name="facebook_app_id">309420147147512</string>
    <string name="fb_login_protocol_scheme">fb309420147147512</string>
    <string name="sort">فرز</string>
    <string name="filter">تصنيف</string>
    <string name="press_once_again_to_exit">اضغط مرة اخرى للخروج</string>
    <string name="ok">حسنا</string>
    <string name="loading">جارى التحميل</string>
    <string name="filters">التصنيفات</string>
    <string name="clear">ازالة</string>
    <string name="apply">تطبيق</string>
    <string name="most_recent">Most Recent</string>
    <string name="most_order">Most Order</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="what_are_u_looking_for">ما الذى تبحث عنة</string>
    <string name="action_search">بحث</string>
    <string name="job_success">النجاح الوظيفى</string>
    <string name="ui_ux_designer">UI/UX مصمم</string>
    <string name="my_desc">
القيام في البقعة الحلوة بين الجماليات والأناقة لإضفاء الحيوية على علامتك التجارية. رأيي لا ينتمي إلى أحد سوى نفسي.</string>
    <string name="about_me">نبذة عنى</string>
    <string name="contact">جهات الاتصال</string>
    <string name="skills">المهارات</string>
    <string name="ratings">تقييمات بالنجوم</string>
    <string name="samplereview">بلا بلا بلا بلا بلا بلا بلا بلا بلا بلا.</string>
    <string name="description">الوصف</string>
    <string name="this_course_include">هذا الدرس يتضمن</string>
    <string name="about_Instructor">عن المدرس</string>
    <string name="enrolled_students">الطلبة المشاركون</string>
    <string name="action_settings">الاعدادات</string>
    <string name="enrolled_courses">الدروس المشاركة</string>
    <string name="Reviews">التقييمات</string>
    <string name="total_students">اجمالى الطلبة</string>
    <string name="personal_information">المعلومات الشخصية</string>
    <string name="just_now">Just Now</string>
    <string name="min_ago">a min ago</string>
    <string name="minites_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="today">Today</string>
    <string name="btn_Proceed">استمرار</string>
    <string name="enter_activation_code_to_buy_the_course">ادخل كود التفعيل </string>
    <string name="vailed_code">"كود صحيح"</string>
    <string name="clear_code">ازالة</string>
    <string name="language">تغيير اللغة</string>
    <string name="course_preview">نبذة عن الدرس</string>
    <string name="course_info">معلومات عن الدرس</string>
    <string name="course_content">محتويات الدرس</string>
    <string name="see_all">عرض المزيد</string>
    <string name="edit">تعديل</string>
    <string name="access_limit"> تفعيل الموضوع كامل والوصول الية فى اى وقت</string>
    <string name="view">عرض</string>
    <string name="buynow">تفعيل الان</string>
    <string name="hello_guest">اهلا.بالزائر</string>
    <string name="what_are_u_searching_today">ما الذى تريد تعلمة اليوم ؟</string>
    <string name="most_popular_courses">افضل الدروس</string>
    <string name="most_popular_inst">افضل المدرسين</string>
    <string name="profile_page">الصفحة الشخصية</string>
    <string name="user_info">المعلومات الشخصية</string>
    <string name="courses">الدروس</string>
    <string name="student">طالب</string>
    <string name="dark_mode">الوضع الداكن</string>
    <string name="theme">التصميم</string>
    <string name="last_request">Last request</string>
    <string name="preview">عرض</string>
    <string name="we_are">نحن الافضل فى</string>
    <string name="different_fields">كل المراحل التعليمية</string>
    <string name="fast_turnaround">افضل المدرسين</string>
    <string name="wide_range_produts">افضل شرح الكترونى</string>
    <string name="best_value">افضل عرض</string>
    <string name="best_seller">الافضل</string>
    <string name="free_return">ارجاع مجانى</string>
    <string name="cash_on_delivery">الدفع عند التوصيل</string>
    <string name="primary_stage">المرحلة الابتدائية</string>
    <string name="middle_stage">المرحلة الاعدادية</string>
    <string name="high_stage">المرحلة الثانوية</string>
    <string name="univ_stage">المرحلة الجامعية</string>
    <string name="btn_close">رجوع</string>
    <string name="coming_soon">قريبا</string>
    <string name="lectures">محاضرة</string>
    <string name="by">بواسطة</string>
    <string name="centers">المجموعات العامة</string>
    <string name="privatecourses">المجموعات الخاصة</string>
    <string name="extra_courses">دروس تدريبية</string>
    <string name="presents_competitions"><![CDATA[هدايا & ومسابقات]]></string>
    <string name="phonenumber">0</string>
    <string name="students">طالب</string>
    <string name="egypt">مصر</string>
    <string name="well_done">احسنت!</string>
    <string name="_points">+5\nنقاط</string>
    <string name="return_to_course">رجوع</string>
    <string name="try_again">حاول مرة اخرى</string>
    <string name="perfect">ممتاز!</string>
    <string name="trueanswer">عبارة صحيحة</string>
    <string name="falseanswer">عبارة خاطئة</string>
    <string name="you_can_do_better">يمكنك تحقيق اكبر من ذلك</string>
    <string name="pointscored">نقاط</string>
    <string name="score">النتيجة:</string>
    <string name="start_exam">دخول الاختبار</string>
    <string name="invild_code">كود غير صالح</string>
    <string name="developer">المطور</string>
    <string name="version">الاصدار</string>
    <string name="rate">التقييم</string>
    <string name="if_you_like_the_app_please_do_rate_it">اذا اعجبك التطبيق برجاء تقييمة</string>
    <string name="changelog">التعديلات</string>
    <string name="licenses">التراخيص</string>
    <string name="your_name">اسمك</string>
    <string name="your_place_of_living">مكان المعيشة</string>
    <string name="add_to_google_plus_circles">اضافة جوجل+</string>
    <string name="follow_on_github">المتابعة على Github</string>
    <string name="follow_on_twitter">المتابعة على تويتر</string>
    <string name="more_apps"> برامج اخرى للمطور</string>
    <string name="support">الدعم</string>
    <string name="report_bugs_feedback">ابلاغ عن خطا / ردود الفعل</string>
    <string name="report_bugs_or_request_new_features">الابلاغ عن خطا او طلب ميزة جديدة فى التطبيق</string>
    <string name="translators">المترجمون</string>
    <string name="translators_who_helped_in_translating_the_app">المترجمون الذين ساعدو فى ترجمة التطبيق</string>
    <string name="donate">الدعم المادى</string>
    <string name="if_you_think_i_deserve_to_get_paid_for_my_work_you_can_leave_me_a_few_dollars_here">
إذا كنت تعتقد أنني أستحق الحصول على أجر مقابل عملي ، يمكنك أن تترك لي بضعة دولارات هنا.</string>
    <string name="your_description">الوصف</string>
    <string name="your_role">صفتك</string>
    <string name="google_plus">جوجل+</string>
    <string name="github">github</string>
    <string name="apps">البرامج</string>
    <string name="about">نبذة عن</string>
    <string name="developers">المطوريين</string>
    <string name="twitter">تويتر</string>
    <string name="desc">I am Student, pursuing Information Technology and an Android Enthusiast and Developer.\nI have developed this About Screen and Many Other Apps on Google Play Store which you can find more about by Clicking MY APPS.\nYou can also check my other Projects on Github.\n\nDesigned and Developed by:\n<b>Mohamed El Sayed</b></string>
    <string name="about_application">معلومات عن البرنامج</string>
    <string name="mohamed_elsayed">محمد السيد</string>
    <string name="toukh_qal">طوخ - القليوبية - مصر</string>
    <string name="view_facebook">عرض الفيس بوك</string>
    <string name="view_whatsapp">عرض الواتس اب</string>
    <string name="phonedev">01277637646</string>
    <string name="code_has_expired_please_enter_new_code">صلاحية الكود انتهت برجاء ادخال كود جديد</string>
    <string name="st_skip">تخطى</string>
    <string name="next">التالى</string>
    <string name="start">ابدا الان</string>
    <string name="learn">تعلم</string>
    <string name="quete1">العلم هو الذي يزين الإنسان و يزيده جمالاً</string>
    <string name="quete2">العلم يبني بيوتاً لا عماد لها، و الجهل يهدم بيت العز و الكرم</string>
    <string name="quete3">رأسمالك علمك و عدوك هو جهلك</string>
    <string name="easy_learn">تعلم بسهولة</string>
    <string name="contact_with_teacher">تعلم من المنزل</string>
    <string name="better_teacher">نخبة من المدرسين والمدرسات لجميع المراحل الدراسية</string>
    <string name="primary_qu">تعتبر هذه المرحلة مرحلة الأساس التعليمي لجميع مراحل التعليم </string>
    <string name="middle_qu">تلاميذ هذه المرحلة بين 12 إلى 15 عاماا</string>
    <string name="high_qu">هو المرحلة الأخيرة من التعليم المدرسي</string>
    <string name="univ_qu">هى اخر مرحلة فى حياة الطالب قبل دخول سوق العمل</string>
    <string name="default_video_time" translatable="false">00:00</string>
    <string name="default_video_combined_time" translatable="false">00:00/00:00</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="battery_percent">battery:%1$d%%</string>
    <string name="volume_changing">volume:%1$d%%</string>
    <string name="brightness_changing">brightness:%1$d%%</string>
    <string name="player_error">player error:%1$d</string>
    <string name="comments">التعليقات :</string>
    <string name="collapse_text_label">اظهر اقل</string>
    <string name="expand_text_label">اظهر المزيد</string>
    <string name="like_btn">اعجبنى</string>
    <string name="reply">رد</string>
    <string name="likes_count">0 اعجاب</string>
    <string name="comment_count">0 تعليقات</string>
    <string name="internet_connection_failed">لا يوجد اتصال بالانترنت</string>
    <string name="send_comment_button_label">ارسال</string>
    <string name="comment_text_hint">اضافة تعليق .......</string>
    <string name="login">تسجيل الدخول</string>
    <string name="please_wait">برجاء الانتظار</string>
    <string name="levels">المراحل التعليمية</string>
    <string name="subjects">المواد التعليمية</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="you_have_to_reg_to_comment">يحب عليك تسجيل الدخول اولا قبل نشر اى تعليق</string>
    <string name="likes">اعجاب</string>
    <string name="comment">تعليقات</string>
    <string name="search_what_you_want">البحث</string>
    <string name="home">الرئيسية</string>
    <string name="news">اخر الاخبار</string>
    <string name="my_groups">دروسى</string>
    <string name="image_desc">Image</string>
    <string name="notification">التنبيهات</string>
    <string name="sign_up">تسجيل جديد</string>
    <string name="enter_name">اكتب الاسم هنا</string>
    <string name="enter_desc">اكتب الوصف هنا</string>
    <string name="enter_position">اكتب الوظيفة هنا</string>
    <string name="enter_age">اكتب العمر هنا</string>
    <string name="enter_phone">اكتب رقم التليفون هنا</string>
    <string name="enter_school">اكتب المدرسة هنا</string>
    <string name="goverment">المحافظة</string>
    <string name="city">المدينة</string>
    <string name="enter_email">اكتب البريد الالكترونى هنا</string>
    <string name="enter_password">اكتب كلمة المرور هنا</string>
    <string name="enter_conf_password">اعد كتابة كلمة المرور هنا</string>
    <string name="register_info">بيانات الحساب</string>
    <string name="location_info">مكان المدرس</string>
    <string name="subject_info">المرحلة الدراسية</string>
    <string name="select_level">المرحلة التعليمية</string>
    <string name="select_t_class">الصف الدراسى</string>
    <string name="select_subject">المادة التعليمية</string>
</resources>