<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_music"
        android:checked="true"
        android:icon="@drawable/ic_home_grey600_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/i_backup"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />
    <!--must set the item title to empty-->
    <item
        android:id="@+id/i_empty"
        android:title=""
        android:icon="@drawable/ic_book"/>
    <item
        android:id="@+id/i_favor"
        android:icon="@drawable/ic_groups"
        android:title="@string/my_groups" />
    <item
        android:id="@+id/i_visibility"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification" />
</menu>