<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".auth.CreateStudentActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1">

        <include layout="@layout/layout_top_bar"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.florent37.shapeofview.shapes.CircleView
                    android:layout_gravity="center"
                    android:id="@+id/circleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?android:attr/colorPrimary"
                    android:elevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/teacherIMG"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/image_desc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_teacher_24dp" />
                </com.github.florent37.shapeofview.shapes.CircleView>


                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:padding="8dp"
                        android:background="@color/grey_200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.rovaind.academy.Utils.views.TextViewAr
                            android:layout_marginStart="20dp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_info"
                            android:textSize="17sp"
                            android:fontFamily="@font/proximanovaregular"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructoremail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        app:met_primaryColor="@color/black"
                        android:inputType="textEmailAddress"
                        app:met_floatingLabel="highlight" />
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:textAlignment="viewStart"
                        android:id="@+id/instructorpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        app:met_primaryColor="@color/black"
                        android:inputType="textPassword"
                        app:met_floatingLabel="highlight" />
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:textAlignment="viewStart"
                        android:id="@+id/instructorconfirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_conf_password"
                        app:met_primaryColor="@color/black"
                        android:inputType="textPassword"
                        app:met_floatingLabel="highlight" />
                    <LinearLayout
                        android:padding="8dp"
                        android:background="@color/grey_200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.rovaind.academy.Utils.views.TextViewAr
                            android:layout_marginStart="20dp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_information"
                            android:textSize="17sp"
                            android:fontFamily="@font/proximanovaregular"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        app:met_primaryColor="@color/black"
                        android:inputType="textPersonName"
                        app:met_floatingLabel="highlight" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructordescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_desc"
                        app:met_primaryColor="@color/black"

                        app:met_floatingLabel="highlight" />


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructorposition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_position"
                        app:met_primaryColor="@color/black"

                        app:met_floatingLabel="highlight" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructor_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_age"
                        app:met_primaryColor="@color/black"
                        android:inputType="number"
                        app:met_floatingLabel="highlight" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructor_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone"
                        app:met_primaryColor="@color/black"
                        android:inputType="number"
                        app:met_floatingLabel="highlight" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/instructor_school"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_school"
                        app:met_primaryColor="@color/black"

                        app:met_floatingLabel="highlight" />

                    <LinearLayout
                        android:padding="8dp"
                        android:background="@color/grey_200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.rovaind.academy.Utils.views.TextViewAr
                            android:layout_marginStart="20dp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/subject_info"
                            android:textSize="17sp"
                            android:fontFamily="@font/proximanovaregular"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/select_level"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <AutoCompleteTextView
                            android:layout_weight="1"
                            android:id="@+id/level_ip"
                            android:enabled="false"
                            android:layout_width="0dp"
                            android:layout_height= "wrap_content"/>
                        <Spinner
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:id="@+id/spinner_level_ip"
                            android:spinnerMode="dropdown"
                            />



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/select_t_class"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <AutoCompleteTextView
                            android:layout_weight="1"
                            android:id="@+id/class_ip"
                            android:enabled="false"
                            android:layout_width="0dp"
                            android:layout_height= "wrap_content"/>
                        <Spinner
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:id="@+id/spinner_class_ip"
                            android:spinnerMode="dropdown"
                            />



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/select_subject"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <AutoCompleteTextView
                            android:layout_weight="1"
                            android:id="@+id/subject_ip"
                            android:enabled="false"
                            android:layout_width="0dp"
                            android:layout_height= "wrap_content"/>
                        <Spinner
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:id="@+id/spinner_subject_ip"
                            android:spinnerMode="dropdown"
                            />



                    </LinearLayout>
                    <LinearLayout
                        android:padding="8dp"
                        android:background="@color/grey_200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.rovaind.academy.Utils.views.TextViewAr
                            android:layout_marginStart="20dp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_info"
                            android:textSize="17sp"
                            android:fontFamily="@font/proximanovaregular"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/goverment"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <AutoCompleteTextView
                            android:layout_weight="1"
                            android:id="@+id/main_ip"
                            android:enabled="false"
                            android:layout_width="0dp"
                            android:layout_height= "wrap_content"/>
                        <Spinner
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:id="@+id/spinner_main_ip"
                            android:spinnerMode="dropdown"
                            />



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/city"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <AutoCompleteTextView
                            android:layout_weight="1"
                            android:id="@+id/sub_ip"
                            android:enabled="false"
                            android:layout_width="0dp"
                            android:layout_height= "wrap_content"/>
                        <Spinner
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:id="@+id/spinner_sub_ip"
                            android:spinnerMode="dropdown"
                            />



                    </LinearLayout>



                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addTeacher"
                    android:layout_width="185dp"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:layout_marginTop="44dp"
                    android:background="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="25dp"
                    app:elevation="25dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    />
            </LinearLayout>
        </TableLayout>
    </ScrollView>

</RelativeLayout>